@@ -1,3 +1,8 @@
+2001-07-17  Mo DeJong  <mdejong@redhat.com>
+
+	* win/tclWinPort.h: Add Cygwin specific defines for environ
+	and timezone variables.
+
 2001-07-17  Andreas Kupries <andreas_kupries@users.sourceforge.net>
 
 	* generic/tclIO.c (GetInput): Fixed [SF #427196]. Memory was
